# webgpu-raytracer

./: .gitmodules  CMakeLists.txt  LICENSE.txt  readme.md  stats.sh
include/webgpu-raytracer/: aabb.hpp  accumulation_bind_group.hpp  alias.hpp  application.hpp  bvh.hpp  camera.hpp  camera_bind_group.hpp  color.hpp  compose_pipeline.hpp  compose_uniforms_bind_group.hpp  geometry_bind_group.hpp  gltf_asset.hpp  gltf_iterator.hpp  gltf_loader.hpp  material_bind_group.hpp  preview_pipeline.hpp  profiler.hpp  raytrace_first_hit_pipeline.hpp  raytrace_monte_carlo_pipeline.hpp  renderer.hpp  scene_data.hpp  shader_registry.hpp  timer.hpp
shaders/: brdf.wgsl  bvh_traverse.wgsl  camera.wgsl  compose.wgsl  env_map.wgsl  geometry.wgsl  material.wgsl  math.wgsl  preview.wgsl  random.wgsl  raytrace_common.wgsl  raytrace_first_hit.wgsl  raytrace_monte_carlo.wgsl  tonemap.wgsl
source/: accumulation_bind_group.cpp  alias.cpp  application.cpp  bvh.cpp  camera.cpp  camera_bind_group.cpp  compose_pipeline.cpp  compose_uniforms_bind_group.cpp  geometry_bind_group.cpp  gltf_loader.cpp  main.cpp  material_bind_group.cpp  preview_pipeline.cpp  profiler.cpp  raytrace_first_hit_pipeline.cpp  raytrace_monte_carlo_pipeline.cpp  renderer.cpp  scene_data.cpp  sdl_wgpu.c  shader_registry.cpp
test_scenes/bunny/: bunny_100k.gltf  bunny_100k_hidden_light.gltf  bunny_100k_no_light.gltf  bunny_10k.gltf  bunny_1k.gltf
test_scenes/dragon/: dragon-50k-glass-thin.gltf  dragon-50k-glass.gltf  dragon-50k-metallic.gltf  dragon_50k.gltf
test_scenes/sphere/: sphere-diffuse.gltf  sphere-emissive.gltf  (+7 more)
(+2 files in other folders)
